@@ -6,11 +6,9 @@ extends 'Dist::Zilla::Plugin::Test::NoTabs';
 
 use namespace::autoclean;
 
-# don't start warning just yet - give people a little bit of time to update
-# warning will be added on Jan 1 2014.
-#before register_component => sub {
-#    warn "!!! [NoTabsTests] is deprecated and will be removed in a future release; replace it with [Test::NoTabs]\n";
-#};
+before register_component => sub {
+    warn "!!! [NoTabsTests] is deprecated and may be removed in a future release; replace it with [Test::NoTabs]\n";
+};
 
 __PACKAGE__->meta->make_immutable;
 __END__
@@ -32,9 +30,9 @@ providing the file F<xt/release/no-tabs.t>, a standard L<Test::NoTabs> test.
 
 THIS MODULE IS DEPRECATED. Please use
 L<Dist::Zilla::Plugin::Test::NoTabs> instead. it may be removed at a
-later time (but not before June 2014).
+later time (but not before October 2014).
 
-In the meantime, it will continue working -- although (soon) with a warning.
+In the meantime, it will continue working -- although with a warning.
 Refer to the replacement for the actual documentation.
 
 =cut
