@@ -3,6 +3,8 @@ Revision history for {{$dist->name}}
 {{$NEXT}}
     - line numbers in shipped code are now almost the same (within 3) as
       the repository source, for easier debugging
+    - formally deprecated [NoTabsTests] (it will continue to exist through
+      October 2014).
 
 0.06      2013-12-14 21:46:23Z
     - new 'file' option, for adding extra files to be checked
